--- a/protobuf-nio-core/pom.xml
+++ b/protobuf-nio-core/pom.xml
@@ -4,12 +4,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>protobuf-nio</artifactId>
-        <groupId>com.github.quantranuk</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <groupId>sk.neuromancer</groupId>
+        <version>1.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
     <artifactId>protobuf-nio-core</artifactId>
+
+    <name>protobuf-nio-core</name>
+    <description>Simple library to send and receive protobuf messages using Java NIO sockets (Core library).</description>
+    <url>https://github.com/J08nY/protobuf-nio</url>
+
+    <developers>
+        <developer>
+            <id>J08nY</id>
+            <name>Ján Jančár</name>
+            <email>j08ny@neuromancer.sk</email>
+            <url>https://neuromancer.sk/</url>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/J08nY/protobuf-nio.git</connection>
+        <developerConnection>scm:git:ssh://github.com:J08nY/protobuf-nio.git</developerConnection>
+        <url>https://github.com/J08nY/protobuf-nio/tree/master</url>
+    </scm>
 
     <dependencies>
         <dependency>
@@ -27,7 +47,6 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.16</version>
         </dependency>
-
 
         <dependency>
             <groupId>junit</groupId>
@@ -53,6 +72,5 @@
             <version>2.24.3</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 </project>
