Add license info.

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
         <url>https://github.com/J08nY/protobuf-nio/tree/master</url>
     </scm>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
