--- a/protobuf-nio-sample/pom.xml
+++ b/protobuf-nio-sample/pom.xml
@@ -31,6 +31,13 @@
         <url>https://github.com/J08nY/protobuf-nio/tree/master</url>
     </scm>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
     <dependencies>
         <dependency>
             <groupId>sk.neuromancer</groupId>
