--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build
-        run: mvn clean install
+        run: mvn clean compile
 
       - name: Test
         run: mvn test
