--- a/protobuf-nio-sample/pom.xml
+++ b/protobuf-nio-sample/pom.xml
@@ -18,12 +18,19 @@
 
     <developers>
         <developer>
+            <id>quantranuk</id>
+            <name>Quan Tran</name>
+            <email>quantran.uk@gmail.com</email>
+            <url>https://github.com/quantranuk</url>
+        </developer>
+        <developer>
             <id>J08nY</id>
             <name>Ján Jančár</name>
             <email>j08ny@neuromancer.sk</email>
             <url>https://neuromancer.sk/</url>
         </developer>
     </developers>
+
 
     <scm>
         <connection>scm:git:git://github.com/J08nY/protobuf-nio.git</connection>
